fixed overflow mobile msg try 4

--- a/src/css/message-box.css
+++ b/src/css/message-box.css
@@ -105,6 +105,6 @@
   }
   .message-form {
     position: absolute;
-    bottom: 1px;
+    bottom: 10vh;
   }
 }
